Fixed spacing and hyperlinked everything in sight.

--- a/public/screen.css
+++ b/public/screen.css
@@ -6,6 +6,16 @@ html {
 	height: 100%;
 }
 
+a {
+	color: black;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+a:hover {
+	color: #2780ca;
+}
+
 body {
 	margin: 0;
 	min-height: 100%;
@@ -28,7 +38,7 @@ main {
 
 figure {
 	width: 40%;
-	border-bottom: 0.09rem solid #f3f3f3;
+	border-bottom: 0.09rem solid #cacaca;
 }
 
 section {
@@ -45,21 +55,24 @@ ul {
 	flex-wrap: wrap;
 }
 
+li {
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
 img {
-	border: 0.09rem solid lightgray;
+	border: 0.09rem solid #cacaca;
 	width: 100%;
 }
 
 footer {
-	border-top: 0.09rem solid lightgray;
+	border-top: 0.09rem solid #cacaca;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 }
 
 .navbuttons {
 	display: flex;
-	justify-content: space-between;
-	align-content: space-between;
+	align-content: space-around;
 }
 
 .logolink {
@@ -67,10 +80,15 @@ footer {
 	padding-top: 0.5rem;
 }
 
+p {
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
+
 .userphotos {
 	width: 35%;
 	border: none;
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+	justify-content: space-around;
+	align-content: center;
 }
